syntax = "proto3";

package api;
option go_package = "git.netflux.io/rob/octoplex/internal/generated/grpc";

import "domain.proto";

message Event {
  oneof event_type {
    AppStateChangedEvent app_state_changed = 1;
    DestinationStreamExitedEvent destination_stream_exited = 2;
    DestinationAddedEvent destination_added = 3;
    AddDestinationFailedEvent add_destination_failed = 4;
    DestinationUpdatedEvent destination_updated = 5;
    UpdateDestinationFailedEvent update_destination_failed = 6;
    DestinationRemovedEvent destination_removed = 7;
    RemoveDestinationFailedEvent remove_destination_failed = 8;
    StartDestinationFailedEvent start_destination_failed = 9;
    MediaServerStartedEvent media_server_started = 10;
    OtherInstanceDetectedEvent other_instance_detected = 11;
    FatalErrorEvent fatal_error = 12;
    HandshakeCompletedEvent handshake_completed = 13;
  }
}

message AppStateChangedEvent { AppState app_state = 1; }

message DestinationStreamExitedEvent {
  string name = 1;
  string error = 2;
}

message DestinationAddedEvent { bytes id = 1; }

message AddDestinationFailedEvent {
  string url = 1;
  string error = 2;
}

message DestinationUpdatedEvent { bytes id = 1; }

message UpdateDestinationFailedEvent {
  bytes id = 1;
  string error = 2;
}

message DestinationRemovedEvent { bytes id = 1; }

message RemoveDestinationFailedEvent {
  bytes id = 1;
  string error = 2;
}

message StartDestinationFailedEvent {
  bytes id = 1;
  string message = 2;
}

message MediaServerStartedEvent {}

message OtherInstanceDetectedEvent {}

message FatalErrorEvent { string message = 1; }

message HandshakeCompletedEvent {}
